--- a/home.html
+++ b/home.html
@@ -12,6 +12,10 @@
 </style>
 <script src=""></script>
 <body> 
+
+    <span class="login"> <a href="login.html">Login</a></span>
+    <span class="signup"><a href="signup.html">Create new account</a></span>
+
     <div class="background" id="login">
     <span class="nuvra">Nuvra Trailers</span>
 
