--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
      
           
           <span class="psw">Forgot <a href="#">password?</a></span>
-          <span class="acct"><a href="#">Create new account</a></span>
+          <span class="acct"><a href="signup.html">Create new account</a></span>
         </div>
         </div>
       </form>
