--- a/home2.html
+++ b/home2.html
@@ -23,7 +23,11 @@
     Nuvra Trailers
     </div>
     
-    <h1><u>Please Login To Gain Access To Full Website</u></h1>
+    <h1>
+        <u>
+            <a href="signup.html">Please Login To Gain Access To Full Website</a>
+        </u>
+    </h1>
 
     <div class="background"
      style="float:right; width: 100%;">
