--- a/home2.html
+++ b/home2.html
@@ -11,9 +11,13 @@
     h1 {text-align: center;
         color:#ae6cec;
         }
+    u {text-align: center;
+        color:#ae6cec;
+        }
+    .nuvra { padding-left: 600px; position: relative;}
 </style>
 </style>
-<script src=""></script>
+
 <body> 
 
     <span class="login"> <a href="login.html">Login</a></span>
@@ -23,11 +27,11 @@
     Nuvra Trailers
     </div>
     
+<u>
     <h1>
-        <u>
-            <a href="signup.html">Please Login To Gain Access To Full Website</a>
-        </u>
-    </h1>
+        <a href="signup.html">Please Login To Gain Access To Full Website (Click Here)</a>
+     </h1>
+</u>
 
     <div class="background"
      style="float:right; width: 100%;">
