--- a/login.html
+++ b/login.html
@@ -2,7 +2,11 @@
 <html>
 <head>
 <link rel="stylesheet" href="login.css">
-
+<style>
+.screentitle {
+    font-size: 50px;
+}
+</style>
 </head>
 <body>
  
