--- a/home2.html
+++ b/home2.html
@@ -11,14 +11,17 @@
     h1 {text-align: center;
         color:#ae6cec;
         }
-    u {text-align: center;
-        color:#ae6cec;
-        }
     .nuvra { padding-left: 600px; position: relative;}
+    p { color:#000000;
+        font-size: 0px;
+        }
 </style>
 </style>
 
 <body> 
+ <p>
+        <a href="home.html">Please Login To Gain Access To Full Website (Click Here)</a>
+     </p>
 
     <span class="login"> <a href="login.html">Login</a></span>
     <span class="signup"><a href="signup.html">Create new account</a></span>
