--- a/home.html
+++ b/home.html
@@ -9,11 +9,16 @@
     .left { float:left; }
     .right { float:right; }
     .nuvra { padding-left: 600px}
+p { color:#000000;
+        font-size: 0px;
+        }
 </style>
 </style>
 <script src=""></script>
 <body> 
-
+<p>
+    <a href="home2.html"> (Click Here)</a>
+ </p>
     <span class="login"> <a href="login.html">Login</a></span>
     <span class="signup"><a href="signup.html">Create new account</a></span>
 
