--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="home.css">
 <style>
-    .left { float:left; }
-    .right { float:right; }
+    .left { float:left; padding-left: 30px; }
+    .right { float:right; padding-right: 30px;}
     .nuvra { padding-left: 600px}
 p { color:#000000;
         font-size: 0px;
